Ex2: added title (score counter) and spans around the numbers

--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -20,17 +20,21 @@
 
   <body>
 
-<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit,<span class="redacted"> sed do eiusmod tempor incididunt ut labore et dolore</span> magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in <span class="secret">reprehenderit</span> in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, <span class="secret"> sunt in </span>culpa qui officia deserunt mollit anim id est laborum.
-</p>
+    <div class="counter">
+      <h1> Word found : <span id="foundSecrets"> 0</span> out of <span id="totalSecret">10</span> </h1>
+    </div>
 
-<p>
-Lorem ipsum dolor sit amet,  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span class="redacted">nostrud exercitation </span> laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <span class="secret">Excepteur sint</span> occaecat cupidatat non proident, sunt in culpa qui <span class="redacted">officia deserunt mollit</span> anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore <span class="secret">magna </span> aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris <span class="secret">nisi ut aliquip </span> ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
+        <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit,<span class="redacted"> sed do eiusmod tempor incididunt ut labore et dolore</span> magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in <span class="secret">reprehenderit</span> in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, <span class="secret"> sunt in </span>culpa qui officia deserunt mollit anim id est laborum.
+        </p>
 
-<p>
-<span class="secret">Lorem ipsum dolor </span> sit amet, sed do eiusmod tempor incididunt <span class="redacted"> ut labore et dolore magna aliqua. Ut enim ad minim veniam, </span> quis nostrud exercitation <span class="secret"> laboris </span> nis lorem lorem <span class="secret"> lorem.</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<span class="secret"> Excepteur </span>sint occaecat <span class="secret">cupidatat non</span> proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
+        <p>
+        Lorem ipsum dolor sit amet,  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <span class="redacted">nostrud exercitation </span> laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <span class="secret">Excepteur sint</span> occaecat cupidatat non proident, sunt in culpa qui <span class="redacted">officia deserunt mollit</span> anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore <span class="secret">magna </span> aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris <span class="secret">nisi ut aliquip </span> ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+
+        <p>
+        <span class="secret">Lorem ipsum dolor </span> sit amet, sed do eiusmod tempor incididunt <span class="redacted"> ut labore et dolore magna aliqua. Ut enim ad minim veniam, </span> quis nostrud exercitation <span class="secret"> laboris </span> nis lorem lorem <span class="secret"> lorem.</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<span class="secret"> Excepteur </span>sint occaecat <span class="secret">cupidatat non</span> proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
 
   </body>
 
