Ex2: added the variables to track how many secrets were found

--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -21,7 +21,7 @@
   <body>
 
     <div class="counter">
-      <h1> Word found : <span id="foundSecrets"> 0</span> out of <span id="totalSecret">10</span> </h1>
+      <h1> Word found : <span id="foundSecrets"> 0</span> out of <span id="totalSecrets">10</span> </h1>
     </div>
 
         <p>
