P1: Added the bed and the bed sheets

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -31,7 +31,22 @@
   <body>
 
     <div class="room">
-      
+
+      <div class="baseBed"></div>
+        <div class="sheets">
+          <p>Bed Sheets</p>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
     </div>
 
   </body>
