P1: Commit bc I have to leave

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -32,12 +32,16 @@
 
     <div class="room">
 
-      <div class="baseBed"></div>
+      <div id="baseBed">
+        <div class="pillows">Pillow 1</div>
+        <div class="pillows">Pillow 2</div>
+      </div>
+
         <div class="sheets">
           <p>Bed Sheets</p>
         </div>
 
-
+        <img id='officeChair' src="assets/images/chair.png" alt="office chair"></img>
 
 
 
