P1: added the faucet, the (future) mouth and the toothbrush
+ made the toothbrush draggable

--- a/projet1/index.html
+++ b/projet1/index.html
@@ -33,11 +33,12 @@
 <main>
 
 
-<img src="" alt="">
+<img class="faucet" src="assets/images/waterFaucet.gif" alt="water running"></img>
 
-  <div class="mouth">
+<div class="mouth"> </div>
 
-  </div>
+<img class="toothbrush" src="assets/images/toothbrush1.png" alt="a thoothbrush"></img>
+
 </main>
 
   </body>
