P1: added into dialog box

--- a/projet1/index.html
+++ b/projet1/index.html
@@ -29,7 +29,6 @@
   </head>
 
   <body>
-
 <main>
 
 
@@ -39,8 +38,16 @@
 
 <img class="toothbrush" src="assets/images/toothbrush1.png" alt="a thoothbrush"></img>
 
-</main>
+<div id="introDialog" title="Ready?">
+  <p>ready?</p>
+</div>
 
+
+
+
+
+
+</main>
   </body>
 
 </html>
