P1: Added teeth and im still working on making the cursor look different
Thats why there is a ton of commented out lines

--- a/projet1/index.html
+++ b/projet1/index.html
@@ -24,6 +24,8 @@
     integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
     crossorigin="anonymous"
   ></script>
+
+
   <!-- My script(s) -->
   <script src="js/script.js"></script>
   </head>
@@ -33,10 +35,23 @@
 
 
 <img class="faucet" src="assets/images/waterFaucet.gif" alt="water running"></img>
+<div class="custom">
 
-<div class="mouth"> </div>
+</div>
 
-<img class="toothbrush" src="assets/images/toothbrush1.png" alt="a thoothbrush"></img>
+<div class="mouth">
+  <div class="teeth"></div>
+  <div class="teeth"></div>
+  <div class="teeth"></div>
+  <div class="teeth"></div>
+  <div class="teeth"></div>
+  <div class="teeth"></div>
+  <div class="teeth"></div>
+  <div class="teeth"></div>
+
+</div>
+
+<!-- <img class="toothbrush" src="assets/images/toothbrush1.png" alt="a thoothbrush"></img> -->
 
 <div id="introDialog" title="Ready?">
   <p>ready?</p>
