--- a/projet1/index.html
+++ b/projet1/index.html
@@ -66,3 +66,5 @@
   </body>
 
 </html>
+
+<!-- Icons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
