P1 The teeth go yellow at different rates

--- a/projet1/index.html
+++ b/projet1/index.html
@@ -40,14 +40,14 @@
 </div>
 
 <div class="mouth">
-  <div class="teeth"></div>
-  <div class="teeth"></div>
-  <div class="teeth"></div>
-  <div class="teeth"></div>
-  <div class="teeth"></div>
-  <div class="teeth"></div>
-  <div class="teeth"></div>
-  <div class="teeth"></div>
+  <div id="teeth1"></div>
+  <div id="teeth2"></div>
+  <div id="teeth3"></div>
+  <div id="teeth4"></div>
+  <div id="teeth5"></div>
+  <div id="teeth6"></div>
+  <div id="teeth7"></div>
+  <div id="teeth8"></div>
 
 </div>
 
