P1: added a SFX and fixed the dialog box

--- a/projet1/index.html
+++ b/projet1/index.html
@@ -25,6 +25,7 @@
     crossorigin="anonymous"
   ></script>
 
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
 
   <!-- My script(s) -->
   <script src="js/script.js"></script>
@@ -53,8 +54,8 @@
 
 <!-- <img class="toothbrush" src="assets/images/toothbrush1.png" alt="a thoothbrush"></img> -->
 
-<div id="introDialog" title="Ready?">
-  <p>ready?</p>
+<div id="introDialog" title="You wanna ">
+  <p> be the very best?</p>
 </div>
 
 
