P1 Fixed some coding issues with Pippin
-fixed the yelloying of the tooth
-fixed the background not displaying

--- a/projet1/index.html
+++ b/projet1/index.html
@@ -41,14 +41,14 @@
 </div>
 
 <div class="mouth">
-  <div id="teeth1"></div>
-  <div id="teeth2"></div>
-  <div id="teeth3"></div>
-  <div id="teeth4"></div>
-  <div id="teeth5"></div>
-  <div id="teeth6"></div>
-  <div id="teeth7"></div>
-  <div id="teeth8"></div>
+  <div id="teeth1" class="teeth"></div>
+  <div id="teeth2" class="teeth"></div>
+  <div id="teeth3" class="teeth"></div>
+  <div id="teeth4" class="teeth"></div>
+  <div id="teeth5" class="teeth"></div>
+  <div id="teeth6" class="teeth"></div>
+  <div id="teeth7" class="teeth"></div>
+  <div id="teeth8" class="teeth"></div>
 
 </div>
 
@@ -57,6 +57,10 @@
 <div id="introDialog" title="You wanna ">
   <p> be the very best?</p>
 </div>
+
+
+
+
 
 
 </main>
