P1: added styling  and text

--- a/projet1/index.html
+++ b/projet1/index.html
@@ -58,12 +58,14 @@
   <p> be the very best?</p>
 </div>
 
-
+</div>
 
 
 
 
 </main>
+
+<div class="textDiv">Sisyphus' Ratchet Dentist Cabinet  </div>
   </body>
 
 </html>
