P1: finished the overall styling (css)
+ Added a font
+added images (zeus and laurel)
+fixed formatting (blank space)

--- a/projet1/index.html
+++ b/projet1/index.html
@@ -29,6 +29,8 @@
 
   <!-- My script(s) -->
   <script src="js/script.js"></script>
+
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -52,7 +54,6 @@
 
 </div>
 
-<!-- <img class="toothbrush" src="assets/images/toothbrush1.png" alt="a thoothbrush"></img> -->
 
 <div id="introDialog" title="You wanna ">
   <p> be the very best?</p>
@@ -61,13 +62,16 @@
 </div>
 
 
-
+<div class="textDiv" >Sisyphus' Ratchet Dentist Cabinet <img src="assets/images/zeus1.png" alt="a lil icon of zeus"></img>
+ </div>
+<div class="textDiv2" >"Cleaning your disgusting teeth for eternity..." <br> <img class="laurel" src="assets/images/laurel.png" alt="a laurel crown"></img> </div>
 
 </main>
 
-<div class="textDiv">Sisyphus' Ratchet Dentist Cabinet  </div>
+
   </body>
 
 </html>
 
 <!-- Icons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
+<!-- (Zeus, Toothbrush and Laurel) -->
