P1 added a dialog box and a pikachu to the first dialog
+added water running sfx and changed the background image

--- a/projet1/index.html
+++ b/projet1/index.html
@@ -41,11 +41,15 @@
       <div id="teeth8" class="teeth"></div>
     </div>
 
-    <!-- a pokemon themed dialog box that has no use whatsoever, I just liked the idea of it being there -->
+    <!-- a pokemon themed dialog box that has no use whatsoever (but to put some music), I just liked the idea of it being there -->
     <div id="introDialog" title="You wanna ">
-      <p> be the very best?</p>
+      <p> be the very best?</p> <img class="pikachu" src="assets/images/pikachu.png" alt="pikachu from the back"></img>
     </div>
     </div>
+
+    <!-- a dialog box to remind Sisyphus to go to his anger management class -->
+    <div id="dialogAnger" title="Reminder">Anger Management Class at 19:00</div>
+  
 
     <!-- The two text divs, one is for the name of the cabinet, the other is the slogan. -->
     <!-- both containing an icon I found on https://www.flaticon.com/authors/monkik -->
