Exercise 3 : initial commit

--- a/projet1/index.html
+++ b/projet1/index.html
@@ -16,6 +16,8 @@
 
   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
 
+  <script src="https://code.responsivevoice.org/responsivevoice.js?></script>
+
   <!-- My script(s) -->
   <script src="js/script.js"></script>
 
@@ -49,7 +51,7 @@
 
     <!-- a dialog box to remind Sisyphus to go to his anger management class -->
     <div id="dialogAnger" title="Reminder">Anger Management Class at 19:00</div>
-  
+
 
     <!-- The two text divs, one is for the name of the cabinet, the other is the slogan. -->
     <!-- both containing an icon I found on https://www.flaticon.com/authors/monkik -->
