P2: started with the css
added the main components

--- a/project2/index.html
+++ b/project2/index.html
@@ -36,7 +36,15 @@
 
   <body>
 
-<main></main>
+<main>
+<h2>Moderation center</h2>
+
+<div class="choicesBox">
+  <div class="left"></div>
+  <div class="right"></div>
+</div>
+
+</main>
 
 
 
