P2 moved the files into folder
it actually works like that

--- a/project2/index.html
+++ b/project2/index.html
@@ -40,9 +40,11 @@
 <h2>Moderation center</h2>
 
 <div class="choicesBox">
-  <div  class="left"></div>
-  <div class="right"></div>
+  <div  class="left">  <img id="left" src="assets/images/logo.png" alt="youtube logo" width=200px></img>
+  </div>
+  <div class="right"><img id="right" src="assets/images/logo.png" alt="youtube logo" width=200px></img></div>
 </div>
+
 
 </main>
 
