P2 working on a progress bar

--- a/project2/index.html
+++ b/project2/index.html
@@ -40,11 +40,13 @@
 <h2>Moderation center</h2>
 
 <div class="choicesBox">
-  <div  class="left">  <img id="left" src="assets/images/logo.png" alt="youtube logo" width=200px></img>
+  <div  class="left">  <img id="left" src="assets/images/logo.png" alt="youtube logo" width=300px></img>
   </div>
-  <div class="right"><img id="right" src="assets/images/logo.png" alt="youtube logo" width=200px></img></div>
+  <div class="right"><img id="right" src="assets/images/logo.png" alt="youtube logo" width=300px></img></div>
 </div>
 
+
+  <div id="bar"></div>
 
 </main>
 
