--- a/project2/index.html
+++ b/project2/index.html
@@ -36,21 +36,11 @@
 
   <body>
 
-<main>
-<h2>Moderation center</h2>
 
-<div class="choicesBox">
-  <div  class="left">  <img id="left" src="assets/images/logo.png" alt="youtube logo" width=300px></img>
+    <div>
+    <label for="customname">Enter character name:</label>
+    <input id="customname" type="text" placeholder="">
   </div>
-  <div class="right"><img id="right" src="assets/images/logo.png" alt="youtube logo" width=300px></img></div>
-</div>
-
-
-  <div id="bar"></div>
-
-</main>
-
-
 
   </body>
 
