--- a/project2/index.html
+++ b/project2/index.html
@@ -33,14 +33,23 @@
     <!-- My script(s) -->
     <script src="js/script.js"></script>
   </head>
-
   <body>
 
+
+<!-- Where the player can start customizing the random story -->
+<!-- home page-->
 
     <div>
     <label for="customname">Enter character name:</label>
     <input id="customname" type="text" placeholder="">
   </div>
+<!-- a button for the player to randomize their story -->
+  <div>
+      <button class="randomize">Generate random story</button>
+    </div>
+<!-- the random story will be written here -->
+      <p class="story"></p>
+
 
   </body>
 
