--- a/project2/index.html
+++ b/project2/index.html
@@ -40,9 +40,18 @@
 <!-- home page-->
 
     <div>
-    <label for="customname">Enter character name:</label>
-    <input id="customname" type="text" placeholder="">
-  </div>
+    <label for="customName">Enter character name:</label>
+    <input id="customName" type="text" placeholder="">
+    </div>
+    <!-- <div>
+      <label for="customLocation">Enter Location:</label>
+      <input id="customLocation" type="text" placeholder="">
+    </div>
+  <div>
+    <label for="customAdjective">Enter Adjective:</label>
+    <input id="customAdjective" type="text" placeholder="">
+</div> -->
+
 <!-- a button for the player to randomize their story -->
   <div>
       <button class="randomize">Generate random story</button>
